<resources>
    <string name="app_name">LIYONS Hotel and Restaurant</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="rooms">Rooms</string>
    <string name="restaurants">Restaurants</string>
    <string name="employees">Employees</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book">Booking</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="manage">Manage</string>

    <string name="E_Search">Search Employee</string>
    <string name="E_Add_Emp">Add New Employee</string>
    <string name="E_View">View</string>
    <string name="E_add_emp">Employee Management</string>
    <string name="E_Registraion">Registration No</string>
    <string name="E_First_Name">First Name</string>
    <string name="E_Last_Name">Last Name</string>
    <string name="E_Address">Address</string>
    <string name="E_Designation">Designation</string>
    <string name="E_Emp_Type">Employee Type</string>
    <string name="E_Emp_Next">Next</string>
    <string name="E_Earning">Earning</string>
    <string name="E_description">Description</string>
    <string name="E_Basic_salary">Basic Salary</string>
    <string name="E_over_time">Overtime Working</string>
    <string name="E_Allowan">Allowance</string>
    <string name="E_Bonus">Bonus</string>
    <string name="E_Deducion">Deduction</string>
    <string name="E_fes">Festival Advance</string>STA
    <string name="E_Epf">EPF(10%)</string>
    <string name="E_cal_sub">Calculate an Submit</string>
    <string name="E_edit_sub">Edit an Calculate</string>
    <string name="E_not">Notification</string>
    <string name="E_not_det">Successfully Registerd</string>
    <string name="E_Full">Full Name</string>
    <string name="E_Total_d">Total Deduction</string>
    <string name="E_Gross">Gross Pay</string>
    <string name="E_Edit_or_Delete">Edit or Delete</string>
    <string name="E_Print">Print</string>
    <string name="E_amount">Amount(LKR)</string>
    <string name="E_delete">Delete</string>
    <string name="E_details">Employee details, Name, Address</string>
    <string name="E_price">RS 0000.00</string>
    <string name="E_adre">Address</string>
    <string name="education_details">Education Details</string>
    <string name="genders">Gender</string>
    <string name="submit">Submit</string>
    <string name="Edit">Edit</string>
    <string name="View">View</string>
    <string name="delete">delete</string>
    <string name="full_name">Full Name</string>
    <string name="moblile_no">Moblile No</string>
    <string name="Update">Update</string>
    <string name="back">Back</string>
    <string name="gender">Gender</string>
    <string name="Updatess">Update</string>
    <string name="take_heart_events">Take Heart Events</string>
    <string name="service_includes">Service Includes</string>
    <string name="birthday_parties">Birthday Parties</string>
    <string name="anniversary_parties">Anniversary Parties</string>
    <string name="bride_to_be_mam_to_be_parties">Bride to be/Mam to be parties</string>
    <string name="baby_showers">Baby showers</string>
    <string name="welcome_home_party">Welcome home party</string>
    <string name="booking">Booking</string>
    <string name="social_events">Social Events</string>
    <string name="holiday_parties">Holiday Parties</string>
    <string name="seasoned_celebration">Seasoned Celebration</string>
    <string name="get_to_gehters">Get to gehters</string>
    <string name="night_outs">Night outs</string>
    <string name="official_events">Official Events</string>
    <string name="conferences">Conferences</string>
    <string name="product_launches">Product Launches</string>
    <string name="sales_events">Sales Events</string>
    <string name="award_dinner">Award Dinner</string>
    <string name="retirement_parties">Retirement Parties</string>
    <string name="e_mail">E-mail</string>
    <string name="event_type">Event Type</string>
    <string name="event_catagorey">Event Catagorey</string>
    <string name="number_of_guest">Number Of Guest</string>
    <string name="date">Date</string>
    <string name="event_name">Event Name</string>
    <string name="plate_price">Plate Price</string>
    <string name="no_of_plate">No of Plate</string>
    <string name="hall_type">Hall Type</string>
    <string name="evbook">BOOK</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="nic">NIC</string>
    <string name="dob">DOB</string>
    <string name="stamp">STAMP</string>
    <string name="loan">Loan</string>
    <string name="fastival_advance">Fastival Advance</string>
    <string name="g_name">Name</string>
    <string name="g_email">Email</string>
    <string name="g_roomtype">Room Type</string>
    <string name="g_guests">Guests</string>
    <string name="g_arrival">Arrival Date</string>
    <string name="g_departure">Departure Date</string>
    <string name="g_edit">Edit</string>
    <string name="res_cus_nane">Customer Name</string>
    <string name="res_con_no">Contact No</string>
    <string name="res_e_mail">E-mail</string>
    <string name="res_house_no">House No</string>
    <string name="res_street">Street</string>
    <string name="res_city">City</string>
    <string name="res_chicken">Chicken Sausage Meat </string>
    <string name="res_super">Super Supreme Pizza</string>
    <string name="res_prawn">Prawn with Chicken Bacon </string>
    <string name="res_hot">Hot Butter Cuttlefish </string>
    <string name="res_redbean">Red Bean Rice</string>
    <string name="res_mix">Chicken Mix Rice</string>
    <string name="res_lankan">Sri Lankan Rice</string>
    <string name="res_pizza">Pizza Menu</string>
    <string name="res_rice">Rice Menu</string>
    <string name="res_medium">Medium Value pizza - LKR500.00</string>
    <string name="res_large">Large Value Pizza - LKR800.00</string>
    <string name="res_mediumm">Large Value Rice - LKR800.00</string>
    <string name="res_largee">Medium Value Rice - LKR500.00</string>
    <string name="res_plserve">Large Serves 4 Adults</string>
    <string name="res_rlserve">Large Serves 2 Adults</string>
    <string name="res_pmserve">Medium Serves 2 Adults</string>
    <string name="res_rmserve">Medium Serves 1 Adult</string>
    <string name="res_meal">Select Your Meal</string>
    <string name="res_size">Select Portion Size</string>
    <string name="res_location">Enter Your Delivery Location</string>
    <string name="res_cus_loca">Delivery Location</string>
    <string name="res_cus_updel">Tap here to update and delete your details</string>
    <string name="res_qty">Quantity</string>
    <string name="res_detl">Enter Your Details</string>
    <string name="res_cus_det">Customer Details</string>
    <string name="attendance_list">Attendance List</string>
    <string name="employee_list">Employee List</string>
    <string name="time_res">When would you like to place your order</string>
    <string name="order_now">Order Now</string>
    <string name="employee_name">Employee Name</string>

</resources>