<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoomDetailsActivity">

    <Button
        android:id="@+id/update_btn3"
        android:layout_width="113dp"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/Updatess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963" />

    <Button
        android:id="@+id/delete_btn2"
        android:layout_width="124dp"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:backgroundTint="?android:attr/colorPressedHighlight"
        android:text="@string/E_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963" />

    <EditText
        android:id="@+id/etno7"
        android:layout_width="370dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/g_departure"
        android:inputType="text"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addreg2"
        app:layout_constraintVertical_bias="0.836" />

    <EditText
        android:id="@+id/etno6"
        android:layout_width="370dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/g_arrival"
        android:inputType="text"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addreg2"
        app:layout_constraintVertical_bias="0.725" />

    <EditText
        android:id="@+id/etno5"
        android:layout_width="370dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/g_guests"
        android:inputType="text"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addreg2"
        app:layout_constraintVertical_bias="0.615" />

    <EditText
        android:id="@+id/etno3"
        android:layout_width="370dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/g_email"
        android:inputType="text"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addreg2"
        app:layout_constraintVertical_bias="0.388" />

    <EditText
        android:id="@+id/etno4"
        android:layout_width="370dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/g_roomtype"
        android:inputType="text"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addreg2" />

    <EditText
        android:id="@+id/etno2"
        android:layout_width="370dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/g_name"
        android:inputType="text"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addreg2"
        app:layout_constraintVertical_bias="0.277" />

    <ImageView
        android:id="@+id/addreg2"
        android:layout_width="417dp"
        android:layout_height="179dp"
        android:background="@drawable/g7"
        android:paddingLeft="5dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

</androidx.constraintlayout.widget.ConstraintLayout>