<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/resbgrounf"
    tools:context=".RiceLankan">


    <TextView
        android:id="@+id/text11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/aclonica"
        android:paddingTop="20dp"
        android:text="@string/res_mix"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image4"
        android:layout_width="wrap_content"
        android:layout_height="246dp"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:srcCompat="@drawable/cknmeal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="53dp" />

    <TextView
        android:id="@+id/text16"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/res_largee"
        android:textAlignment="center"
        android:fontFamily="@font/aclonica"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="339dp" />

    <TextView
        android:id="@+id/text27"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/res_rlserve"
        android:textAlignment="center"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="516dp" />

    <TextView
        android:id="@+id/text18"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/res_rmserve"
        android:textAlignment="center"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="389dp" />

    <TextView
        android:id="@+id/text19"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/res_mediumm"
        android:fontFamily="@font/aclonica"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="466dp" />

    <Button
        android:id="@+id/buttonn2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="Order"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="622dp" />

    <Button
        android:id="@+id/buttonn3"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="Back"
        android:textAlignment="center"
        android:textColorHint="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="686dp" />
</androidx.constraintlayout.widget.ConstraintLayout>