<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_add_room_res">

    <Button
        android:id="@+id/back_btn3"
        android:layout_width="125dp"
        android:layout_height="51dp"
        android:layout_weight="1"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="Back"
        app:layout_constraintBaseline_toBaselineOf="@+id/submit_btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submit_btn2"
        android:layout_width="125dp"
        android:layout_height="51dp"
        android:layout_weight="1"
        android:backgroundTint="?android:attr/colorPressedHighlight"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <EditText
        android:id="@+id/etno7"
        android:layout_width="370dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/g_departure"
        android:inputType="text"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addreg2"
        app:layout_constraintVertical_bias="0.863" />

    <EditText
        android:id="@+id/etno6"
        android:layout_width="370dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/g_arrival"
        android:inputType="text"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addreg2"
        app:layout_constraintVertical_bias="0.749" />

    <EditText
        android:id="@+id/etno5"
        android:layout_width="370dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/g_guests"
        android:inputType="text"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addreg2"
        app:layout_constraintVertical_bias="0.642" />

    <EditText
        android:id="@+id/etno3"
        android:layout_width="370dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/g_email"
        android:inputType="text"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addreg2"
        app:layout_constraintVertical_bias="0.412" />

    <EditText
        android:id="@+id/etno4"
        android:layout_width="370dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/g_roomtype"
        android:inputType="text"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addreg2"
        app:layout_constraintVertical_bias="0.528" />

    <EditText
        android:id="@+id/etno2"
        android:layout_width="370dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/g_name"
        android:inputType="text"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addreg2"
        app:layout_constraintVertical_bias="0.292" />

    <ImageView
        android:id="@+id/addreg2"
        android:layout_width="wrap_content"
        android:layout_height="179dp"
        android:background="@drawable/g7"
        android:paddingLeft="5dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        app:srcCompat="@drawable/g7"
        tools:srcCompat="@drawable/g7" />

    <Button
        android:id="@+id/button2"
        android:layout_width="133dp"
        android:layout_height="51dp"
        android:layout_marginStart="1dp"
        android:text="View"
        app:layout_constraintBaseline_toBaselineOf="@+id/back_btn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_btn3" />
</androidx.constraintlayout.widget.ConstraintLayout>